--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,6 +2,13 @@
 title: Home
 content_blocks:
   - _bookshop_name: content
-    content_html: <h1>fdsgsdgsdgfdsgfsdvsdfvsfd</h1>
+    content_html: >-
+      <h3 class="align-to-center">&nbsp;Make a donation Make a donation Make a
+      donation Make a donation Make a donation</h3>
+SEO_options:
+  title:
+  description:
+  image:
+  prevent_indexing: false
 ---
 
