Updated 'site/collections/_pages/index.html' via CloudCannon

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -1,5 +1,30 @@
 ---
 title: Home
 content_blocks:
+  - _bookshop_name: content
+    content_html: >-
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
+      placerat urna, non placerat lacus. Proin tincidunt mattis elit, feugiat
+      finibus nunc accumsan vel. Etiam vel fermentum odio, sit amet ullamcorper
+      tortor. Suspendisse quis aliquam velit, in vestibulum libero. Nullam et
+      lorem tempor, ullamcorper arcu eu, mattis lorem. Etiam viverra odio non
+      tristique viverra. Pellentesque eget orci in nunc dapibus tristique.
+      Integer aliquet felis ligula, in vehicula augue egestas non. Quisque
+      hendrerit odio ut porttitor fermentum. Maecenas id egestas tellus. Cras
+      facilisis elit non viverra volutpat. Integer iaculis dui urna, ut mattis
+      lectus vehicula quis. Suspendisse molestie est quis elementum imperdiet.
+      Donec luctus vehicula ante ut pretium. Ut in dignissim nibh.</p><p>Fusce
+      eget odio convallis, pulvinar nisl sed, tempor velit. Praesent feugiat
+      ullamcorper dolor vel interdum. Morbi ut facilisis justo. Praesent ex
+      ligula, euismod quis turpis vel, mollis accumsan tortor. Duis semper non
+      urna vitae malesuada. Sed leo libero, ornare in placerat et, aliquam in
+      mi. Maecenas dolor arcu, faucibus at mi ac, condimentum cursus nibh.
+      Nullam vitae massa est. Integer dapibus, ligula at rutrum hendrerit, diam
+      quam blandit turpis, sed molestie erat sapien vel erat. Vestibulum
+      ultricies mauris quis suscipit lobortis. Etiam faucibus leo urna, at
+      blandit sapien dapibus venenatis. Curabitur rutrum dolor vitae lacus
+      malesuada elementum.</p>
+    text_color: '#4475be'
+    font: Arial
 ---
 
