Updated 'site/collections/_pages/index.html' via CloudCannon

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -24,7 +24,7 @@ content_blocks:
       ultricies mauris quis suscipit lobortis. Etiam faucibus leo urna, at
       blandit sapien dapibus venenatis. Curabitur rutrum dolor vitae lacus
       malesuada elementum.</p>
-    text_color: '#4475be'
+    text_color: '#565656'
     font: Arial
 ---
 
