--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -3,7 +3,8 @@ title: Home
 content_blocks:
   - _bookshop_name: content
     content_html: >-
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
+      <h3>Content Component</h3><p>Click to edit this component.<br /><br
+      />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
       placerat urna, non placerat lacus. Proin tincidunt mattis elit, feugiat
       finibus nunc accumsan vel. Etiam vel fermentum odio, sit amet ullamcorper
       tortor. Suspendisse quis aliquam velit, in vestibulum libero. Nullam et
@@ -24,13 +25,24 @@ content_blocks:
       ultricies mauris quis suscipit lobortis. Etiam faucibus leo urna, at
       blandit sapien dapibus venenatis. Curabitur rutrum dolor vitae lacus
       malesuada elementum.</p>
-    text_color: '#565656'
+    text_color: '#000000'
     font: Arial
   - _bookshop_name: image-with-text
     image_position: Left
-    image: "https://source.unsplash.com/random/1500x1146"
+    image: https://source.unsplash.com/random/1500x1146
     image_seo_description: Lorem ipsum dolor sit amet
     content_html: >-
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non placerat urna, non placerat lacus. Proin tincidunt mattis elit, feugiat finibus nunc accumsan vel. Etiam vel fermentum odio, sit amet ullamcorper tortor. Suspendisse quis aliquam velit, in vestibulum libero. Nullam et lorem tempor, ullamcorper arcu eu, mattis lorem. Etiam viverra odio non tristique viverra. Pellentesque eget orci in nunc dapibus tristique. Integer aliquet felis ligula, in vehicula augue egestas non. Quisque hendrerit odio ut porttitor fermentum. Maecenas id egestas tellus. Cras facilisis elit non viverra volutpat. Integer iaculis dui urna, ut mattis lectus vehicula quis. Suspendisse molestie est quis elementum imperdiet. Donec luctus vehicula ante ut pretium. Ut in dignissim nibh.</p>
+      <h3>Image with text Component</h3><p>Click to edit this component<br /><br
+      />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
+      placerat urna, non placerat lacus. Proin tincidunt mattis elit, feugiat
+      finibus nunc accumsan vel. Etiam vel fermentum odio, sit amet ullamcorper
+      tortor. Suspendisse quis aliquam velit, in vestibulum libero. Nullam et
+      lorem tempor, ullamcorper arcu eu, mattis lorem. Etiam viverra odio non
+      tristique viverra. Pellentesque eget orci in nunc dapibus tristique.
+      Integer aliquet felis ligula, in vehicula augue egestas non. Quisque
+      hendrerit odio ut porttitor fermentum. Maecenas id egestas tellus. Cras
+      facilisis elit non viverra volutpat. Integer iaculis dui urna, ut mattis
+      lectus vehicula quis. Suspendisse molestie est quis elementum imperdiet.
+      Donec luctus vehicula ante ut pretium. Ut in dignissim nibh.</p>
 ---
 
