--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -3,8 +3,7 @@ title: Home
 content_blocks:
   - _bookshop_name: content
     content_html: >-
-      <h3>Content Component</h3><p>Click to edit this component.<br /><br
-      />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
+      <h3>Content Component</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
       placerat urna, non placerat lacus. Proin tincidunt mattis elit, feugiat
       finibus nunc accumsan vel. Etiam vel fermentum odio, sit amet ullamcorper
       tortor. Suspendisse quis aliquam velit, in vestibulum libero. Nullam et
@@ -32,8 +31,7 @@ content_blocks:
     image: https://source.unsplash.com/random/1500x1146
     image_seo_description: Lorem ipsum dolor sit amet
     content_html: >-
-      <h3>Image with text Component</h3><p>Click to edit this component<br /><br
-      />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
+      <h3>Image with text Component</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non
       placerat urna, non placerat lacus. Proin tincidunt mattis elit, feugiat
       finibus nunc accumsan vel. Etiam vel fermentum odio, sit amet ullamcorper
       tortor. Suspendisse quis aliquam velit, in vestibulum libero. Nullam et
