--- a/component-library/shared/jekyll/page.jekyll.html
+++ b/component-library/shared/jekyll/page.jekyll.html
@@ -1,7 +1,6 @@
 {% if include.content_blocks.size > 0 %}
     <div class="c-page theme-{{ include.page_theme | slugify | default: 'dark' }}">
 
-    {% assign block_count = 0 %}
     {% for block in include.content_blocks %}
         {% assign c = block._bookshop_name | prepend: 'c-' %}
         <div class="{{c}}
@@ -12,12 +11,11 @@
                     {% elsif block._branded %}
                     component-wrapper--branded
                     {% endif %}" 
-             data-cms-editor-link="cloudcannon:#content_blocks[{{ block_count }}]">
+             data-cms-editor-link="cloudcannon:#content_blocks[{{ forloop.index0 }}]">
              <span class="cms-editor-button"></span>
             
             {% bookshop {{block._bookshop_name}} bind=block %}
         </div>
-        {% assign block_count = block_count | plus: 1 %}
     {% endfor %}
 
     </div>
