--- a/site/components.html
+++ b/site/components.html
@@ -3,8 +3,28 @@ permalink: /components/
 published: false
 ---
 
-<!-- 
-    The bookshop_browser component loads an 
-    interactive component library on your website.
--->
-{% bookshop_browser localhost:6061/bookshop.js %}
+{% comment %}
+    # NB: None of the tags on this page are required for a production build
+    # of your website. They serve only to power the component browser
+    # interface that Bookshop provides.
+{% endcomment %}
+
+{% if jekyll.environment == "production" %}
+
+    {% comment %}
+        # When running in production, `bookshop-hosted` in package.json
+        # builds a static hosted version of your component browser
+        # to the following path.
+    {% endcomment %}
+    {% bookshop_browser /assets/bookshop-hosted.js %}
+
+{% else %}
+
+    {% comment %}
+        # When running locally, `bookshop-dev` in package.json
+        # hosts a local webserver that powers your component browser
+        # and enables hot-reloading withing the component browser.
+    {% endcomment %}
+    {% bookshop_browser :6061 %}
+
+{% endif %}
